Use valueOf()
- Remove redundant parentheses
- No need to nest